Please add items to this changelog that are:

 * New features.
 * Bugs that have been fixed.

Add items using the following format:

   [Name]
   * What you did 
   * If a bug (LP: #BUGNUMBER)

   For example:

   [Matt Fischer]
   * Fixed this format section (LP: #000000000)

-------------------------------------------------------------------------

Next Version Target: 0.4

   [Matt Fischer]
   * Fix lintian issues
   * Added a manpage (LP: #1069264)

-------------------------------------------------------------------------